# cuNeuralFoil

./: .gitignore  LICENSE  README.md  pyproject.toml
cuneuralfoil/: __init__.py  cu_kulfan_airfoil.py  main.py  test.py
